--- a/Proyecto Pagina Web/index.html
+++ b/Proyecto Pagina Web/index.html
@@ -16,7 +16,7 @@
                 <figure class="figure">
                     <img class="figure-img img-fluid" id="figura_nintendo" src="images/nintendo.svg" alt="Nintendo">
                     <figcaption class="figure-caption"></figcaption>
-                   </figure>                   
+                </figure>                   
             </div>
             <div id="login">   
                 <div class="div_login">            
@@ -25,20 +25,33 @@
                 </div>
             </div>
         </header>
-        <nav>
-            <div>
-                <div>
+        <nav class="repeating-linear-gradient" >
+            <div class="nav_div">
+                <div class="repeating-linear-g                                    radient" id="movimiento">
+                    <p class="nav-div__p">Movimiento reducido&nbsp;&nbsp;</p>
+                    <input type="checkbox" name="" class="checkbox_movimiento">
 
                 </div>
-                <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div class="repeating-linear-gradient" id="nav_nintendo_menu" >
+                    <button>Inicio</button>
+                    <button>Historia de Mario</button>
+                    <button>Personajes</button>
+                    <button></button>
+
+                        <!-- <ul>
+                            <li>Incio</li>
+                            <li>Historia de Mario</li>
+                            <li>Personajes</li>
+                            <li>Noticias</li>
+                        </ul> -->
+                    
                 </div>
             </div>
-            <div>
-
+            <div id="nav_nintendo">
+                <figure class="figure_nintedo">
+                    <img class="figure-img img-fluid" id="figura_logo_nintendo" src="images/logo_nintendo.svg" alt="Nintendo">
+                    <figcaption class="figure-caption"></figcaption>
+                </figure> 
             </div>
         </nav>
         <section>
