--- a/Proyecto Pagina Web/index.html
+++ b/Proyecto Pagina Web/index.html
@@ -33,17 +33,17 @@
 
                 </div>
                 <div class="repeating-linear-gradient" id="nav_nintendo_menu" >
-                    <button>Inicio</button>
+                    <!-- <button>Inicio</button>
                     <button>Historia de Mario</button>
                     <button>Personajes</button>
-                    <button></button>
+                    <button></button> -->
 
-                        <!-- <ul>
+                        <ul>
                             <li>Incio</li>
                             <li>Historia de Mario</li>
                             <li>Personajes</li>
                             <li>Noticias</li>
-                        </ul> -->
+                        </ul>
                     
                 </div>
             </div>
