--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -9,14 +9,92 @@
     <title>Document</title>
 </head>
 <body>
-    <section>
+    <div id="calculadora">
+        <h1 >CASIO</h1>
         <p>
-            Casio <br><br>
-            ELECTRONIC CALCULATOR <br>
-            HL-815L
+           ELECTRONIC CALCULATOR <br/>
+           HL-815L 
         </p>
+  
+        <input type="number" name="" id="pantalla"> 
+        <table>
+            <tbody>
+                <tr>
+                    <td>OFF</td>
+                    <td>MRC</td>
+                    <td>M-</td>
+                    <td>M+</td>
+                    <td>÷</tr>
+                </tr>
+                <tr>
+                    <td>%</td>
+                    <td>7</td>
+                    <td>8</td>
+                    <td>9</td>
+                    <td>X</td>
+                </tr>
+                <tr>
+                    <td>√</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td>C</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td rowspan="2">+</td>
+                </tr>
+                <tr>
+                    <td>AC</td>
+                    <td>0</td>
+                    <td>.</td>
+                    <td>=</td>
+                
+                </tr>
+            </tbody>
+        </table>   
+        <!-- <div id="botones">
+            <section>
+                <button>OFF</button>
+                <button>MRC</button>
+                <button>M-</button>
+                <button>M+</button>
+                <button>÷</button>
+            </section>
 
-    </section>
+            <section>
+                <button>%</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>X</button>
+            </section>
+            <section>
+                <button>√</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>-</button>
+            </section>
+            <section>
+                <button>AC</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>+</button>
+            </section>
+            <section>
+                <button>C</button>
+                <button>0</button>
+                <button>.</button>
+                <button>=</button>
+
+            </section>
+        </div> -->
+    </div>
 
 </body>
 </html>
