--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -41,7 +41,7 @@
                         <td>-</td>
                     </tr>
                     <tr>
-                        <td>C</td>
+                        <td><button type="button" class="botones" onclick="Limpiar()">C</button></td>
                         <td><button type="button" class="botones" onclick="capturar1()">1</button></td>
                         <td><button type="button" class="botones" onclick="capturar2()">2</button></td>
                         <td><button type="button" class="botones" onclick="capturar3()">3</button></td>
@@ -49,7 +49,7 @@
                     </tr>
                     <tr>
                         <td>AC</td>
-                        <td>0</td>
+                        <td><button type="button" class="botones" onclick="capturar0()">0</button></td>
                         <td>.</td>
                         <td>=</td>
                     
