--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -27,21 +27,21 @@
                         <td><button type="button" class="botones" onclick="dividir()">÷</button></td>
                     </tr>
                     <tr>
-                        <td><button>%</button></td>
+                        <td><button type="button" class="botones" onclick="capturar_modulo()">%</button></td>
                         <td><button type="button" class="botones" onclick="capturar7()">7</button></td>
                         <td><button type="button" class="botones" onclick="capturar8()">8</button></td>
                         <td><button type="button" class="botones" onclick="capturar9()">9</button></td>
                         <td><button type="button" class="botones" onclick="multiplicar()"></button>X</td>
                     </tr>
                     <tr>
-                        <td>√</td>
+                        <td><button type="button" class="botones" onclick="raiz()">√</button></td>
                         <td><button type="button" class="botones" onclick="capturar4()">4</button></td>
                         <td><button type="button" class="botones" onclick="capturar5()">5</button></td>
                         <td><button type="button" class="botones" onclick="capturar6()">6</button></td>
                         <td><button type="button" class="botones" onclick="restar()">-</button></td>
                     </tr>
                     <tr>
-                        <td><button type="button" class="botones" onclick="Limpiar()">C</button></td>
+                        <td><button type="button" class="botones" onclick=" Limpiar()">C</button></td>
                         <td><button type="button" class="botones" onclick="capturar1()">1</button></td>
                         <td><button type="button" class="botones" onclick="capturar2()">2</button></td>
                         <td><button type="button" class="botones" onclick="capturar3()">3</button></td>
